classes/04class/exercises/c04-iac04/julio-pimentel/terraform-code/iac-04-module/c04_iac04_sg/main.tf
resource "aws_security_group" "alb_sg_1" {
  name = var.alb_sg_name
  description = "Allow HTTP traffic"
  vpc_id = var.vpc_id

  ingress {
    description = "Allow HTTP ingress traffic from anywhere"
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH ingress through port 22"
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all egress traffic to anywhere"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.alb_sg_name
  }
}
